# applo

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  scraper_test.py
applo/: config.py  models.py
applo/db/: __init__.py  database.py
applo/integrations/: google.py
applo/pipeline/: __init__.py  filter.py  jd_fetcher.py  optimizer.py
applo/resume/: generator.py  parser.py
applo/scrapers/: __init__.py  base.py  glassdoor.py  indeed.py  registry.py
applo/utils/: logger.py
applo/web/: app.py
applo/web/templates/: base.html  index.html  job_detail.html
applo/web/templates/partials/: job_actions.html  job_list.html  job_row.html  optimization_editor.html
docs/: architecture.md  scrapers.md
