[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "applo"
version = "0.1.0"
description = "Automated job application pipeline"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "pypdf>=4.2",
    "reportlab>=4.1",
    "anthropic>=0.28",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
    "loguru>=0.7",
    "pdfplumber>=0.11",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["applo*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"